Archive REVIEW_p1_t1_task_system_contract report

--- a/.flow/params.yaml
+++ b/.flow/params.yaml
@@ -11,3 +11,8 @@ project:
 verify:
   tests: make test
   lint: make lint
+
+task_system:
+  kind: github              # github | jira | linear | none
+  project_key: Flow         # optional lightweight scope key
+  task_url_template: "https://github.com/example/repo/issues/{id}"  # optional
