--- a/.flow/params.yaml
+++ b/.flow/params.yaml
@@ -13,6 +13,6 @@ verify:
   lint: make lint
 
 task_system:
-  kind: github              # github | jira | linear | none
+  kind: file                # file | github | jira | linear | none
   project_key: Flow         # optional lightweight scope key
-  task_url_template: "https://github.com/example/repo/issues/{id}"  # optional
+  task_url_template: "SPECS/Workplan.md#p1-t1-add-task_system-section-to-flow-paramsyaml"  # optional markdown anchor template
